# ara

./: .gitignore  Cargo.toml  LICENSE  README.md  eslint.config.mjs  package.json  tsconfig.json  vitest.workspace.js
crates/ara/: Cargo.toml  README.md
crates/ara-math/: Cargo.toml
crates/ara-math/src/: geometry.rs  mat3.rs  math.rs  size.rs  vec2.rs
crates/ara/src/: ara.rs  arc_string.rs  canvas.rs  gpu.rs  paint.rs  renderer.rs  slot.rs
crates/ara/src/canvas/: backend_context.rs  backend_target.rs  builder.rs  offscreen_context.rs  offscreen_target.rs  render_context.rs  render_list.rs  snapshot.rs  surface.rs  target.rs  web.rs  web_context.rs
crates/ara/src/earcut/: mod.rs
crates/ara/src/gpu/: error.rs  web.rs
crates/ara/src/paint/: atlas.rs  brush.rs  color.rs  draw_list.rs  graphics_instruction.rs  mesh.rs  stroke_tessellate.rs  texture.rs
crates/ara/src/path/: builder.rs  geo.rs  mod.rs
crates/ara/src/render/: context.rs  item_map.rs  mod.rs  pipes.rs  plugin.rs  renderable.rs  runner.rs  systems.rs  texture.rs  view.rs
crates/ara/src/render/render_target/: backend.rs  mod.rs  system.rs  web.rs
crates/ara/src/render/renderable/: system.rs
crates/ara/src/render/screen/: mod.rs  system.rs
crates/ara/src/render/shaders/: ara.wgsl
crates/ara/src/render/systems/: encoder.rs  geometry.rs  global_uniform.rs
crates/ara/src/render/texture/: image.rs  source.rs
crates/ara/src/render/view/: system.rs
crates/ara/src/resources/: shader.wgsl
crates/ara/src/scene/: container.rs  graphics.rs  mod.rs  node.rs
crates/ara/src/scene/graphics/: context.rs  context_system.rs  path.rs  pipe.rs
crates/ara/src/scene/node/: id.rs  parent.rs
crates/ara/src/text/: system.rs
examples/: Cargo.toml
examples/src/: basic.rs  graphics.rs  main.rs
